compiler/testData/asJava/lightClasses/compilationErrors/SameName.java
public final class A {
    private final int i = 0;
    private final java.lang.String i$1 = "";
    private final java.lang.String j = "a";
    private final java.lang.String j$1 = "b";

    public final void f(int i, double s) { /* compiled code */ }

    public final void f(int i, double s) { /* compiled code */ }

    public final int g(int i, double s) { /* compiled code */ }

    @org.jetbrains.annotations.NotNull
    public final java.lang.String g(int s, double i) { /* compiled code */ }

    public A() { /* compiled code */ }
}